apps/staging/mealie/velero_backup_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
spec:
  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes: mealie-data
