apps/staging/mealie/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: mealie
  name: mealie
spec:
  ingressClassName: traefik
  rules:
  - host: mealie.staging.andlogreg.work
    http:
      paths:
      - backend:
          service:
            name: mealie
            port:
              number: 9000
        path: /
        pathType: Prefix
